--- a/src/bundle.css
+++ b/src/bundle.css
@@ -15,3 +15,4 @@
 .fond-gris {background-color: #f2f2f2;}
 .element-centre {margin: auto;}
 .texte-centre {text-align: center;}
+.titre {font-size: 20px;}
